# RhythmCat

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile64  README  RhythmCat  RhythmCat-1.0.0~110402.spec  RhythmCat-1.0.0~110504.spec  RhythmCat-1.0.0~110515.spec  RhythmCat-1.0.0~110606.spec  RhythmCat-1.0.0~110607.spec  RhythmCat-1.0.0~110802.spec  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  core.c  core.h  debug.c  debug.h  declaration.h  global.h  gui.c  gui.h  gui_dialog.c  gui_dialog.h  gui_eq.c  gui_eq.h  gui_lrc.c  gui_lrc.h  gui_lrc_desk.c  gui_lrc_desk.h  gui_menu.c  gui_menu.h  gui_setting.c  gui_setting.h  (+25 more)
arch/: PKGBUILD  PKGBUILD-plugins-base  PKGBUILD-plugins-extra  RhythmCat.install
autom4te.cache/: output.0  output.1  output.2  output.3  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
autom4te.cache/.svn/: all-wcprops  entries
autom4te.cache/.svn/text-base/: output.1.svn-revert  requests.svn-revert  traces.3.svn-revert
conf/: setting.conf
data/: Makefile  Makefile.am  Makefile.in  RhythmCat.desktop  lyric.lang
data/.svn/: all-wcprops  entries
data/.svn/text-base/: Makefile.in.svn-revert  Makefile.svn-revert
data/conf/: Makefile  Makefile.am  Makefile.in  setting.conf
data/conf/.svn/: all-wcprops  entries
data/icons/: Makefile  Makefile.am  Makefile.in
data/images/: Makefile  Makefile.am  Makefile.in  Thanks.TXT
data/images/.svn/: all-wcprops  entries
data/plugins/: Makefile  test.c
data/plugins/.svn/: all-wcprops  entries
data/skins/.svn/: all-wcprops  entries
data/themes/: Makefile  Makefile.in
data/themes/AeroBlue/: Makefile.in  gtk3.css  gtkrc
data/themes/Monochrome/: Makefile  Makefile.am  Makefile.in  gtk3.css  gtkrc
debian/: README.source  changelog  control  copyright  manpage.1  manpage.xml.ex  menu  postinst  postrm
doc/: Makefile  Makefile.in
doc/reference/: Makefile  Makefile.am  Makefile.in  RhythmCat-decl-list.txt  RhythmCat-decl-list.txt.bak  RhythmCat-decl.txt  RhythmCat-decl.txt.bak  RhythmCat-docs.sgml  RhythmCat-scan.c  RhythmCat-sections.txt  RhythmCat-undocumented.txt  RhythmCat-unused.txt  RhythmCat.args  RhythmCat.hierarchy  RhythmCat.interfaces  RhythmCat.signals  RhythmCat.types  plugin-programming.xml
doc/reference/html/: PluginProgMan.html  PluginProgramming.html  RCGuiScrolledText.html  RCPlayer.html  RhythmCat-Asynchronous-Message-Queue.html  RhythmCat-CUE-Parser.html  RhythmCat-Core.html  RhythmCat-Debug.html  RhythmCat-Dialogs.html  RhythmCat-Equalizer-UI.html  RhythmCat-GUI.html  RhythmCat-Lyric.html  RhythmCat-Main-UI.html  RhythmCat-Mini-Mode-GUI.html  RhythmCat-Mini-Mode-UI.html  RhythmCat-Player.html  RhythmCat-Playlist-Views-UI.html  RhythmCat-Playlist.html  RhythmCat-Plugin-Configuration-UI.html  RhythmCat-Plugin-Support.html  RhythmCat-RCGuiScrolledText.html  RhythmCat-RCPlayer.html  RhythmCat-Settings-UI.html  RhythmCat-Settings.html  RhythmCat-Tag.html  RhythmCat-gui-dialog.html  (+16 more)
locale/: RhythmCat.po  zh_CN.po
locale/ja_JP/: ja_JP.po
locale/zh_CN/: RhythmCat.po  zh_CN.po
locale/zh_TW/: zh_TW.po
m4/.svn/: all-wcprops  entries
plugins/desktop-lyric/: Makefile  Makefile3  desklrc.c  desklrc.h  desktop-lyric.conf
plugins/lyric-crawler/: Makefile  Makefile3  build.sh  crawler.c  crawler_baidu.c  crawler_baidu.h  crawler_common.c  crawler_common.h  crawler_lrc123.c  crawler_lrc123.h  crawler_ttplayer.c  crawler_ttplayer.h  lyric-crawler.conf
plugins/lyric-editor/: Makefile  Makefile3  lyric-editor.conf  lyriceditor.c
plugins/lyric-show/: Makefile  Makefile3  lyric-show.conf  lyricshow.c  lyricshow.h
plugins/notify/: Makefile  Makefile3  notify.c  notify.conf
plugins/pytest/: Makefile  pytest.c  pytest.py
plugins/tageditor/: Makefile  Makefile3  tageditor.c  tageditor.conf
po/: ChangeLog~  Makefile  Makefile.in  POTFILES  POTFILES.in  RhythmCat.pot  en.gmo  en.po  en.po~  ja_JP.gmo  ja_JP.po  ja_JP.po~  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po  zh_TW.po~
po/.svn/: all-wcprops  entries
rpm/: RhythmCat-1.0.0.spec  RhythmCat-1.0.1.spec  RhythmCat-plugin-base.spec  RhythmCat-plugin-extra.spec
src/: Makefile  Makefile.am  Makefile.in  RhythmCat  Shizuku  core.c  core.h  cue.c  cue.h  debug.c  debug.h  global.h  gui.c  gui.h  gui_dialog.c  gui_dialog.h  gui_eq.c  gui_eq.h  gui_kara.c  gui_lrc.c  gui_lrc.h  gui_lrc_desk.h  gui_menu.c  gui_menu.h  gui_mini.c  gui_mini.h  gui_plugin.c  gui_plugin.h  gui_setting.c  gui_setting.h  gui_style.c  gui_style.h  gui_text.c  gui_text.h  gui_tools.c  gui_treeview.c  gui_treeview.h  gui_vis.c  gui_vis.h  img_icon.xpm  (+26 more)
src/.deps/: core.Po  debug.Po  gui.Po  gui_dialog.Po  gui_eq.Po  gui_kara.Po  gui_lrc.Po  gui_lrc_desk.Po  gui_menu.Po  gui_mini.Po  gui_plugin.Po  gui_setting.Po  gui_style.Po  gui_text.Po  gui_tools.Po  gui_treeview.Po  karaoke.Po  lyric.Po  main.Po  msg.Po  player.Po  player_object.Po  playlist.Po  plugin.Po  settings.Po  shell.Po  tag.Po  tools.Po
src/.deps/.svn/: all-wcprops  entries
src/.deps/.svn/text-base/: debug.Po.svn-revert  gui_dialog.Po.svn-revert  gui_lrc.Po.svn-revert  gui_setting.Po.svn-revert  lyric.Po.svn-revert  main.Po.svn-revert  settings.Po.svn-revert  tag_id3.Po.svn-revert
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.am.svn-revert  Makefile.in.svn-revert  Makefile.svn-revert  core.c.svn-revert  debug.h.svn-revert  global.h.svn-revert  gui_dialog.c.svn-revert  gui_style.h.svn-revert  lyric.c.svn-revert  main.c.svn-revert  playlist.c.svn-revert  settings.h.svn-revert  tag.c.svn-revert  tag.h.svn-revert
src/imgs/: img_nocov.xpm
src/plugins/cover-getter/: cover-getter.conf
src/plugins/desktop-lyric/: Makefile  desklrc.c  desklrc.h  desktop-lyric.conf
src/plugins/lyric-show/: Makefile  lyric-show.conf  lyricshow.c  lyricshow.h
src/unused/: gui_kara.c  gui_kara.h  gui_tools.c  karaoke.h  tools.c
src/unused/.svn/: all-wcprops  entries
src/unused/.svn/text-base/: gui_lrc_desk.c.svn-revert  tools.h.svn-revert
(+101 files in other folders)
